k8s/manifests/gateway/gateway.yaml
---
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: cilium-gw
  namespace: infra
spec:
  gatewayClassName: cilium-tailscale-gw-class
  infrastructure:
    annotations:
      tailscale.com/expose: "true"
      tailscale.com/hostname: "cilium-gw"
      tailscale.com/proxy-class: "stateful-proxy"
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
